corrrect marker location for csed mnnit on map

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
             </div>
             
             <div class="footer-right">
-                <iframe id="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.5147843892647!2d81.84175!3d25.4358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398519b47c9e09ad%3A0x4cc88f3f3d3f3d3f!2sComputer%20Science%20Department%2C%20MNNIT%20Allahabad!5e0!3m2!1sen!2sin!4v1705425234567" width="100%" height="100%" style="border:0; border-radius: 12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe id="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.6066929890527!2d81.83967!3d25.43287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xf55eb06eb6538746!2sComputer%20Science%20and%20Engineering%20Department%2C%20MNNIT%20Allahabad!5e0!3m2!1sen!2sin!4v1705425234567" width="100%" height="100%" style="border:0; border-radius: 12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             
             <div class="footer-bottom">
